Upgrade Node.js runtime to 22.x

--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "react-dom": "19.2.3",
     "uuid": "^13.0.0"
   },
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "devDependencies": {
     "@aws-amplify/backend": "^1.19.0",
     "@aws-amplify/backend-cli": "^1.8.1",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "aws-cdk-lib": "^2.216.0",
